// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pages Settings android should renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Navbar
    title="Settings"
  />
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingHorizontal": 20,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "paddingVertical": 20,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Switch
          disabled={false}
          onValueChange={[MockFunction]}
          thumbTintColor="#355974"
          value={true}
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "fontSize": 16,
              "paddingHorizontal": 10,
            }
          }
        >
          Early Beta access.
        </Text>
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 12,
            "marginTop": 5,
          }
        }
      >
        Please be careful ! You phone might automatically install a buggy version of Monica on your phone.
      </Text>
    </View>
    <Button
      disabled={false}
      loading={false}
      onPress={[Function]}
    >
      Logout
    </Button>
  </View>
</View>
`;

exports[`Pages Settings android should renders correctly 2`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Navbar
    title="Settings"
  />
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingHorizontal": 20,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "paddingVertical": 20,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Switch
          disabled={false}
          onValueChange={[MockFunction]}
          thumbTintColor="#355974"
          value={false}
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "fontSize": 16,
              "paddingHorizontal": 10,
            }
          }
        >
          Early Beta access.
        </Text>
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 12,
            "marginTop": 5,
          }
        }
      >
        Please be careful ! You phone might automatically install a buggy version of Monica on your phone.
      </Text>
    </View>
    <Button
      disabled={false}
      loading={false}
      onPress={[Function]}
    >
      Logout
    </Button>
  </View>
</View>
`;

exports[`Pages Settings ios should renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Navbar
    title="Settings"
  />
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingHorizontal": 20,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "paddingVertical": 20,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Switch
          disabled={false}
          onValueChange={[MockFunction]}
          thumbTintColor={null}
          value={true}
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "fontSize": 16,
              "paddingHorizontal": 10,
            }
          }
        >
          Early Beta access.
        </Text>
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 12,
            "marginTop": 5,
          }
        }
      >
        Please be careful ! You phone might automatically install a buggy version of Monica on your phone.
      </Text>
    </View>
    <Button
      disabled={false}
      loading={false}
      onPress={[Function]}
    >
      Logout
    </Button>
  </View>
</View>
`;

exports[`Pages Settings ios should renders correctly 2`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Navbar
    title="Settings"
  />
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingHorizontal": 20,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "paddingVertical": 20,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <Switch
          disabled={false}
          onValueChange={[MockFunction]}
          thumbTintColor={null}
          value={false}
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "fontSize": 16,
              "paddingHorizontal": 10,
            }
          }
        >
          Early Beta access.
        </Text>
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "fontSize": 12,
            "marginTop": 5,
          }
        }
      >
        Please be careful ! You phone might automatically install a buggy version of Monica on your phone.
      </Text>
    </View>
    <Button
      disabled={false}
      loading={false}
      onPress={[Function]}
    >
      Logout
    </Button>
  </View>
</View>
`;
